# aws-hands-on

./: .gitignore  README.md
0-aws-ima-hands-on/0-aws-iam-basic/: Readme.md
0-aws-ima-hands-on/cognito-auth/: main.py  pyproject.toml
1-aws-vpc-hands-on/: Readme.md
1-aws-vpc-hands-on/0-aws-subnets/: Readme.md
1-aws-vpc-hands-on/1-aws-private-resourses-communication/: Readme.md
aws-services-dashboard/: aws-services.html  styles.css
aws-vpc-hands-on/: Read.md  Readme.md  notes.md  outputs.tf  pseudocode.md  tf-vpc-hands-on.tf
aws-vpc-hands-on/network/: main.tf
tf/: main.tf
tf/compute/: main.tf
